--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,12 +1,11 @@
 <!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
 <div class="grid-item">
   {% if project.redirect -%}
   <a href="{{ project.redirect }}">
     {%- else -%}
     <a href="{{ project.url | relative_url }}">
       {%- endif %}
-      <div class="card hoverable">
+      <div class="card">
         <div class="card-body">
           {%- if project.img %}
           {%- include figure.html
